--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 							>
 						</div>
 						<div class="order-form-img">
+                            <img class="order-form-photo" src="./images/photo.png" alt="women-photo" />
 							<img
 								class="form-background-img"
 								src="./images/8-8 3.png"
 								alt="building"
-							/><img class="order-form-photo" src="./images/photo.png" alt="" />
-						</div>
+							/>
+                             
 					</div>
 				</div>
 			</section>
